# kuka_experimental

kuka_rsi_hw_interface/: CMakeLists.txt  CMakeLists.txt.user.ef69d12
kuka_rsi_hw_interface/config/: rsi_external_axes.yaml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.h  rsi_command.h  rsi_state.h  rsi_state.h.autosave  udp_server.h
kuka_rsi_hw_interface/krl/KR_C2/: ros_rsi_ethernet.xml
kuka_rsi_hw_interface/krl/KR_C4/: ros_rsi_ethernet.xml
kuka_rsi_hw_interface/launch/: controller_spawner.launch
kuka_rsi_hw_interface/msg/: input_data.msg  uint16_t_array.msg
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp  kuka_hardware_interface_node.cpp
kuka_rsi_hw_interface/srv/: write_output_bool_array.srv  write_output_bool_array_2outs.srv  write_output_bool_array_all_outs.srv  write_outputs.srv
kuka_rsi_hw_interface/test/: ag1_params.yaml  ag2_params.yaml  test_hardware_interface.launch  test_params.yaml
kuka_rsi_simulator/launch/: kuka_rsi_simulator.launch
kuka_rsi_simulator/scripts/: kuka_rsi_simulator
